fix: modify RuleRCOwnerTest